Begin REST API for creating amendments
